# Windows-mcp

./: .gitignore  .mcp.json  CLAUDE.md  INSTALL.md  MANIFEST.in  PACKAGING_SUMMARY.md  README_INSTALLATION.md  main.py  manifest.json  pyproject.toml
.claude/: settings.local.json
docs/architecture/: ARCHITECTURE.md  COMPONENTS.md  DATAFLOW.md  OVERVIEW.md
windows_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
